fix: Align Items & removing unnecessary margins

--- a/style.css
+++ b/style.css
@@ -12,30 +12,31 @@ body {
 }
 
 .container {
-    display: block;
-    max-width: 70%;
+    display: flex;
+    max-width: 60%;
     margin: 0 auto;
-    align-items: center;
     padding-top: 20px;
     text-align: center;
-}
+    align-items: center;
+    }
 
 .container-full {
     display: inline-block;
     width: 100%;
-    height: 80vh;
+    height: 60vh;
     margin: 0 auto;
     text-align: center;
 }
 
 .heading-top {
-    margin-top:-10px;
+    margin: 0;
     text-align: center;
+    font-size: 15px;
 }
 
 .heading-bottom {
-    font-size: 140px;
-    color: rgba(255,255,255,0.8);
+    font-size: 120px;
+    color: rgba(255,255,255,1);
     text-align: center;
 }
 
@@ -46,7 +47,7 @@ body {
     object-fit: contain;
     background-size: cover;
     width: 100%;
-    height: 60vh;
+    height: 50vh;
     
 }
 
@@ -62,21 +63,20 @@ h1 {
 
 h2 {
     font-weight: 700;
-    font-size: 2rem;
+    text-align: start;
 }
 
 p {
-    line-height: 1.6;
+    line-height: 1.3;
 }
 
 .section {
-    display: relative;
+    display: flex;
     align-items: center;
     justify-content: center;
-    width: 620px;
+    width: 630px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
     margin-top: 20px;
     border-radius: 10px;
 }
@@ -85,15 +85,17 @@ p {
     display: relative;
     background-color: #fff;
     color: #000;
-    max-width: 600px;
-    height: 300px;
-    padding: 0 10px;
+    max-width: 400px;
+    height: 200px;
+    padding-left: 20px;
+    padding-right: 10px;
+    text-align: start;
     border-radius: 0 0px 10px 10px;
 }
 
 img {
-    width: 620px;
-    height: 400px;
+    width: 430px;
+    height: 300px;
     object-fit: cover;
     border-radius: 10px 10px 0px 0px;
 }
@@ -111,11 +113,11 @@ footer {
     .container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content:center;
     }
 
     .section {
-        flex: 1 0 48%;
+        flex: 2 1 48%;
         margin-bottom: 0;
     }
 }
